--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
    </head>
    <body>
       <p>Redirecting to GitHub</p>
+      <a rel="me" href="https://mastodonsocial.ca/@pacha">Mastodon</a>
    </body>
 </html>
