--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Mauricio "Pachá" Vargas Sepúlveda
 
 <h2 id="about-me">About me</h2>
 
-<p>👋 I am a statistician interested in applying statistical methods to address specific policy-relevant questions, particularly in international trade, migration, investments and theoretically founded empirical work. These interests led me to create a consistent line of <a href="#selected-r-packages">R packages</a> to provide datasets and estimation methods useful for researchers interested in International Trade and affine disciplines.</p>
+<p>I am a statistician interested in applying statistical methods to address specific policy-relevant questions, particularly in international trade, migration, investments and theoretically founded empirical work. These interests led me to create a consistent line of <a href="#selected-r-packages">R packages</a> to provide datasets and estimation methods useful for researchers interested in International Trade and affine disciplines.</p>
 
 <p>I am completing a Master in Political Science at UofT, where I enrolled in the core courses in Public Policy, alongside the methods track for policy and politics research. I hold a Master in Statistics from <a href="https://www.uc.cl/en">Universidad Católica de Chile</a> (distinction and honors), and a professional degree (5 years diploma) in Business Engineering (i.e., Business and Economics) from the University of Chile.</p>
 
@@ -119,7 +119,7 @@ Mauricio "Pachá" Vargas Sepúlveda
 
 <h3 id="r4ds-es">R for Data Science in Spanish (R4DS-ES)</h3>
 
-<p>I translated a large part of 📖 R for Data Science translation into <a href="https://es.r4ds.hadley.nz/">Spanish</a>, where I also had to organize the community involved in the translation. This project also features <a href="https://r4ds-soluciones.netlify.app">solutions</a> in Spanish.</p>
+<p>I wrote a large part of R for Data Science translation into <a href="https://es.r4ds.hadley.nz/">Spanish</a>, where I also had to organize the community involved in the translation. This project also features <a href="https://r4ds-soluciones.netlify.app">solutions</a> in Spanish.</p>
 
 <img src="valid-html401.png" alt="Valid HTML 4.01 Transitional" width="88" height="31" align="right"></a>
 
