--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Mauricio "Pachá" Vargas Sepúlveda
 
 <p>One of the challenges in gravity modeling is to produce theoretically consistent models that are also computationally efficient. For  masters in Statistics' thesis I replicated all the models in the book <a href="https://www.wto.org/english/res_e/publications_e/advancedguide2016_e.htm">An Advanced Guide to Trade Policy Analysis</a> and writing open source software for specific gravity modeling including clustered standard errors and misspecification tests. In this line, I have written the R package <a href="https://CRAN.R-project.org/package=gravity">gravity</a>, with its corresponding <a href="https://joss.theoj.org/papers/10.21105/joss.01038">article</a>, which implements different methods available in the literature such as Poisson Pseudo Maximum Likelihood alongside OLS, Logit and other classic methods, with the idea of providing policy makers with easy to use software that allows them to focus on the evaluation of initiatives such as subscribing or expanding a Free Trade Agreement.</p>
 
-<h3 id="gravity-estimation-and-efficient-software-implementations">Efficient data access</h3>
+<h3 id="efficient-data-access">Efficient data access</h3>
 
 <p>I intend to summarise gigabytes of data into country and product profiles for academics and policymakers interested in trade. Since 2017, I’ve maintained the project <a href="#open-trade-statistics">Open Trade Statistics</a>, where I provide free access to curated trade data based on the United Nations trade statistics. I’ve created R packages to easily access <a href="https://github.com/pachadotdev/desta">The Design of Trade Agreements Database (DESTA)</a>, the <a href="https://github.com/pachadotdev/usitcgravity">International Trade and Production Database for Estimation (ITPD-E)</a>, and other affine datasets. This work aims at easing data access to help to facilitate research, and has required me to master R, C++ and SQL, therefore I have computational skills more common in software engineering rather than Political Science or Statistics.</p>
 
@@ -121,7 +121,7 @@ Mauricio "Pachá" Vargas Sepúlveda
 
 <p>I wrote a large part of R for Data Science translation into <a href="https://es.r4ds.hadley.nz/">Spanish</a>, where I also had to organize the community involved in the translation. This project also features <a href="https://r4ds-soluciones.netlify.app">solutions</a> in Spanish.</p>
 
-<img src="valid-html401.png" alt="Valid HTML 4.01 Transitional" width="88" height="31" align="right"></a>
+<a href="https://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Transitional" height="31" width="88" align="right"></a>
 
 </body>
 
