correct desta link

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ Mauricio "Pachá" Vargas Sepúlveda
 
 <ul>
 <li>Vargas, et. al (2022). <em>Fixest 2: Efficient Fixed-Effects Estimation in R With C++ 11 Backend</em>. URL: <a href="https://github.com/pachadotdev/fixest/tree/cpp11-some-r-refactoring">github.com/pachadotdev/fixest2</a>.</li>
-<li>Vargas (2022). <em>The Design of Trade Agreements Database (DESTA)</em>. URL: <a href="https://github.com/pachadotdev/usitcgravity">github.com/pachadotdev/usitcgravity</a>.</li>
-<li>Vargas (2022). <em>USITC Gravity Database Adapted From the International Trade and Production Database for Estimation (ITPD-E) and Dynamic Gravity Dataset (DGD)</em>. URL: <a href="https://github.com/pachadotdev/desta">github.com/pachadotdev/desta</a>.</li>
+<li>Vargas (2022). <em>The Design of Trade Agreements Database (DESTA)</em>. URL: <a href="https://github.com/pachadotdev/desta">github.com/pachadotdev/desta</a>.</li>
+<li>Vargas (2022). <em>USITC Gravity Database Adapted From the International Trade and Production Database for Estimation (ITPD-E) and Dynamic Gravity Dataset (DGD)</em>. URL: <a href="https://github.com/pachadotdev/usitcgravity">github.com/pachadotdev/usitcgravity</a>.</li>
 <li>Woelwer, A.-L., et al. (2021). <em>Gravity: Estimation methods for gravity models</em>. URL: <a href="https://CRAN.R-project.org/package=gravity">CRAN.R-project.org/package=gravity</a>.</li>
 <li>Vargas, M. (2021). <em>Tradepolicy: Replication of an advanced guide to trade policy analysis</em>. URL: <a href="https://CRAN.R-project.org/package=tradepolicy">CRAN.R-project.org/package=tradepolicy</a>.</li>
 <li>Vargas, M. (2021). <em>Tradestatistics: Open trade statistics API wrapper and utility program</em>. URL: <a href="https://docs.ropensci.org/tradestatistics">docs.ropensci.org/tradestatistics</a>.</li>
