--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Mauricio "Pachá" Vargas Sepúlveda
 <h2 id="about-me">About me</h2>
 
 <p>I am a statistician interested in applying statistical methods to address specific policy-relevant questions, particularly in 
-    international trade, migration, investments and theoretically founded empirical work. These interests led me to create a 
+    international trade and theoretically founded empirical work. These interests led me to create a 
     consistent line of <a href="#selected-r-packages">R packages</a> to provide datasets and estimation methods useful for 
     researchers interested in International Trade and affine disciplines.</p>
 
@@ -43,8 +43,8 @@ Mauricio "Pachá" Vargas Sepúlveda
 
 <h2 id="research">Research</h2>
 
-<p>My main research interests and contributions are in three interrelated areas: (i) Political economy of trade policies; 
-    (ii) Gravity estimation and efficient software implementations; and (iii) Efficient data access and information reproducibility, interrelated areas directly 
+<p>My main research interests and contributions are in two interrelated areas: Political economy of trade policies, and  
+    Gravity estimation and efficient software implementations. These areas are directly 
     linked to the Sustainable Development goals of <a href="https://www.un-ilibrary.org/content/sdgs/sdg9">Industry, Innovation and 
     Infrastructure</a> and <a href="https://www.un-ilibrary.org/content/sdgs/sdg16">Peace, Justice and Strong Institutions</a>.</p>
 
@@ -69,13 +69,10 @@ Mauricio "Pachá" Vargas Sepúlveda
 </ul>
 
 <p>From these questions I am trying to jump to use of policy instruments (such as NTMs) to achieve the Sustainable Development Goals 
-    (SDGs). To the best of my ability, I have not found extensive discussion about offshoring processes outside the "global north", 
-    or if the lessons from those processes can be extended, for example, to Latin America, where technological backlog configures
-    different agendas because of distinct developmental stages.</p>
-
-<p>Trade policy also covers sanctions, whose application aims at destabiling a dictatorship, preventing war or protecting human 
-    rights in a country. I ask myself about the efficacy of those measures and who finally pays the costs of those sanctions, but I 
-    also ask myself how to tailor sanctions to maximize their efectiveness.</p>
+    (SDGs). The recent rise of protectionism, uncertainty with the future of the World Trade Organization (WTO) and global trade regime,
+    rising significance of digital trade, LDCs graduations, increasing complexity of the regional trade agreements and 
+    non-tariff trade policies demand policymakers to seek for effective trade cooperation and direct it towards coordination and 
+    integration.</p>
 
 <h3 id="gravity-estimation-and-efficient-software-implementations">Gravity estimation and efficient software implementations</h3>
 
@@ -94,23 +91,6 @@ Mauricio "Pachá" Vargas Sepúlveda
     computational power, and they lack the required analytical capacity to formulate evidence-based policies and assess their impacts. I 
     believe I can make a contribution to strengthening analytical capacity of LDCs to conduct analysis of impact of trade policy 
     towards sustainable development.</p>
-
-<h3 id="efficient-data-access-and-information-reproducibility">Efficient data access and information reproducibility</h3>
-
-<p>I intend to summarise gigabytes of data into country and product profiles for academics and policymakers interested in trade. 
-    Since 2017, I’ve maintained the project <a href="#open-trade-statistics">Open Trade Statistics</a>, where I provide free access 
-    to curated trade data based on the United Nations trade statistics.</p>
-
-<p>I’ve created R packages to easily access 
-    <a href="https://github.com/pachadotdev/desta">The Design of Trade Agreements Database (DESTA)</a>, the 
-    <a href="https://github.com/pachadotdev/usitcgravity">International Trade and Production Database for Estimation (ITPD-E)</a>, 
-    and other affine datasets.</p>
-
-<p>In general, I try to replicate all the articles I find interesting. For example, I was able to replicate 'The Log of Gravity' and
-    put the results in a short <a href="https://github.com/pachadotdev/tribute-log-of-gravity/blob/main/replication.pdf">PDF article</a>.</p>
-
-<p>This work aims at easing data access to help to facilitate research, and has required me to master R, C++ and SQL, therefore I have 
-    computational skills more common in software engineering rather than Political Science or Statistics.</p>
 
 <h2 id="open-source">Open source</h2>
 
