--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <p>My main research interests and contributions are in two interrelated areas: Political economy of trade policies,
         and
         Gravity estimation and efficient software implementations. These areas are directly
-        linked to the Sustainable Development goals of <a href="https://www.un-ilibrary.org/content/sdgs/sdg9">Industry,
+        linked to the Sustainable Development Goals (SDGs) of <a href="https://www.un-ilibrary.org/content/sdgs/sdg9">Industry,
             Innovation and
             Infrastructure</a> and <a href="https://www.un-ilibrary.org/content/sdgs/sdg16">Peace, Justice and Strong
             Institutions</a>.</p>
@@ -79,21 +79,22 @@
         are:</p>
 
     <ul>
-        <li>Which are the decomposed effects (i.e. GDP changes from one province) of the trade policy?</li>
-        <li>Which commodities should be present in tarrifs negotiation?</li>
-        <li>Which is the ideal timing to face trade-induced unemployment with industry protection and reconverting the
-            workforce?</li>
+        <li>Which are the decomposed effects of the trade policy? I care about changes in GDP, factory-gate prices and 
+            consumer prices from sectoral or provincial levels.</li>
+        <li>How do we integrate relevant actors in trade negotiations? Multiple Streams Framework (MSF) provides some
+            lessons on information sorting that we can apply to coordinate actors' preferences and negotiated commodities
+            tariffs.</li>
+        <li>Is there room to move closer to Sustainable Development Goals (SDGs) achivement through regional integration and 
+            complementary trade policies? The empirical evidence, particularly in Latin America, suggests that the political
+            stability and business environment act as a brake on Foreign Domestic Investment (FDI) and cross-country
+            businesses.</li>
     </ul>
 
-    <p>From these questions I am trying to jump to use of policy instruments (such as NTMs) to achieve the Sustainable
-        Development Goals
-        (SDGs). The recent rise of protectionism, uncertainty with the future of the World Trade Organization (WTO) and
+    <p>The recent rise of protectionism, uncertainty with the future of the World Trade Organization (WTO) and
         global trade regime,
-        rising significance of digital trade, LDCs graduations, increasing complexity of the regional trade agreements
-        and
-        non-tariff trade policies demand policymakers to seek for effective trade cooperation and direct it towards
-        coordination and
-        integration.</p>
+        rising significance of digital trade, least developed countries (LDCs) graduations, increasing complexity of the 
+        regional trade agreements and non-tariff trade policies demand policymakers to seek for effective trade cooperation 
+        and direct it towards coordination and integration.</p>
 
     <h3 id="gravity-estimation-and-efficient-software-implementations">Gravity estimation and efficient software
         implementations</h3>
