better abotu section

--- a/index.html
+++ b/index.html
@@ -26,106 +26,86 @@
 
     <h2 id="about-me">About me</h2>
 
-    <p>I am a statistician interested in applying statistical methods to address specific <a
-            href="#research">policy-relevant questions</a>, particularly in
-        international trade and theoretically founded empirical work. These interests led me to create a
-        consistent line of <a href="#selected-r-packages">R packages</a> to provide datasets and estimation methods
-        useful for
-        researchers interested in International Trade and affine disciplines.</p>
+    <p>
+        I am an MA student in Political Science at the University of Toronto. My research interests include international
+        relations, public policy and political economy, with a focus on the politics of trade, international institutions, 
+        and trade agreements. My research is motivated by the central question: 
+        Which are the consequences of decomposed trade policy effects?
+    </p>
 
-    <p>I am completing a M.A. at UofT (honors), where I enrolled in the core courses in Public Policy, alongside the
-        methods track for policy and politics research. I hold a M.Sc. from <a href="https://www.uc.cl/en">Universidad
-            Católica de Chile</a> (honors), and a professional degree (5 years diploma) in Business Engineering (i.e.,
-        Business and Economics) from the University of Chile.</p>
+    <p>
+        I am particularly interested in changes in production and consumption prices, internal and external multi-lateral
+        resistances and how these changes create trade-induced changes in employment and other measures of economic welfare.
+        Such changes can be understood as costs that justify an incumbent government to justify opposition to trade based on
+        electoral calculations, even if it is economically inefficient, and protect organized or unorganized industries.
+    </p>
+    
+    <p>These interest areas are directly linked to the Sustainable Development Goals (SDGs) of 
+        <a href="https://www.un-ilibrary.org/content/sdgs/sdg9">Industry, Innovation and Infrastructure</a> and 
+        <a href="https://www.un-ilibrary.org/content/sdgs/sdg16">Peace, Justice and Strong Institutions</a>.
+    </p>
 
-    <p>Contact me at hello+spam@pacha.dev (i.e., use +r, +training, +tutoring, etc. and I'll see your email
-        fast enough). I can provide my CV (academic/profesional) upon request.</p>
-
-    <p>Follow me on <a rel="me" href="https://mastodonsocial.ca/@pacha">Mastodon</a>! I created a new instance called
-        Mastodon Social.
-        I also have <a href="https://orcid.org/0000-0003-1017-7574">ORCID</a> and <a
-            href="https://github.com/pachadotdev">GitHub</a>
-        profiles.</p>
+    <p>
+        I have a Master in Statistics from the Catholic University and an Engineering degree from the University of Chile.
+        I can provide my CV (academic/profesional) upon request.
+    </p>
+    
+    <p>
+        You can reach me at hello+spam@pacha.dev or mv.sepulveda+spam@mail.utoronto.ca (please remove the +spam or
+        your messages will go to the spam folder).
+    </p>
 
     <h2 id="research">Research</h2>
 
-    <p>My main research interests and contributions are in two interrelated areas: Political economy of trade policies,
-        and
-        Gravity estimation and efficient software implementations. These areas are directly
-        linked to the Sustainable Development Goals (SDGs) of <a href="https://www.un-ilibrary.org/content/sdgs/sdg9">Industry,
-            Innovation and
-            Infrastructure</a> and <a href="https://www.un-ilibrary.org/content/sdgs/sdg16">Peace, Justice and Strong
-            Institutions</a>.</p>
+    <h3>Research Interests</h3>
 
-    <p>For my thesis for the Master in Political Science, I am working on each of these topics, with a focus in
-        reproducibility. I
-        prepared a preprint on arXiv, <a href=" 	arXiv:2209.14748">Economic effects of Chile FTAs and an eventual CTPP
-            accession</a>,
-        using aggregated data, to illustrate the general idea.</p>
-
-    <h3 id="political-economy-of-trade-policies">Political economy of trade policies</h3>
-
-    <p>My main interest is to explore the distributional consequences of trade policy changes at industry and sector
-        levels.
-        The global economic interdependence justifies measuring the effect of trade policy changes in one market and how
-        this will trigger ripple effects in the rest of the world. Economic gains or losses are not homogeneous at
-        sub-national level,
-        and are often highly correlated with industries or sectors geographically dispersed because of especialization.
+    <p>
+        International Political Economy: Politics of Trade, Market Access, Tariff and Non-Tariff Measures.
     </p>
 
-    <p>I am interested in studying existing agreements, observed tariffs, non-tariff measures (NTMs), and bilateral
-        trade flow to produce
-        knowledge that countries can use to negociate or expand their agreements intelligently. My central questions
-        are:</p>
-
-    <ul>
-        <li>Which are the decomposed effects of the trade policy? I care about changes in GDP, factory-gate prices and 
-            consumer prices from sectoral or provincial levels.</li>
-        <li>How do we integrate relevant actors in trade negotiations? Multiple Streams Framework (MSF) provides some
-            lessons on information sorting that we can apply to coordinate actors' preferences and negotiated commodities
-            tariffs.</li>
-        <li>Is there room to move closer to Sustainable Development Goals (SDGs) achivement through regional integration and 
-            complementary trade policies? The empirical evidence, particularly in Latin America, suggests that the political
-            stability and business environment act as a brake on Foreign Domestic Investment (FDI) and cross-country
-            businesses.</li>
-    </ul>
-
-    <p>The recent rise of protectionism, uncertainty with the future of the World Trade Organization (WTO) and
-        global trade regime,
-        rising significance of digital trade, least developed countries (LDCs) graduations, increasing complexity of the 
-        regional trade agreements and non-tariff trade policies demand policymakers to seek for effective trade cooperation 
-        and direct it towards coordination and integration.</p>
-
-    <h3 id="gravity-estimation-and-efficient-software-implementations">Gravity estimation and efficient software
-        implementations</h3>
-
-    <p>One of the challenges in gravity modeling is to produce theoretically consistent models that are also
-        computationally efficient.
-        I replicated all the models in the book
-        <a href="https://www.wto.org/english/res_e/publications_e/advancedguide2016_e.htm">An Advanced Guide to Trade
-            Policy Analysis</a>
-        and wrote open source software for specific gravity modeling including clustered standard errors and
-        misspecification tests.
+    <p>
+        Public Policy: Public-Private Trade Programs, Exports Diversification and Sustainability, Labour Reconversion
     </p>
 
-    <p>In this line, I have written the R package <a href="https://CRAN.R-project.org/package=gravity">gravity</a>, with
-        its corresponding
-        <a href="https://joss.theoj.org/papers/10.21105/joss.01038">article</a>, which implements different methods
-        available in the
-        literature. It covers Poisson Pseudo Maximum Likelihood (PPML), OLS, Logit and other classic methods, with the
-        idea of providing
-        policy makers with easy to use software that allows them to focus on the evaluation of initiatives such as
-        subscribing or
-        expanding a Free Trade Agreement.
+    <p>
+        Research Methods: Quantitative Methods, Network Analysis, Text Analysis
     </p>
 
-    <p>I write open source software because Least Developed Countries (LDCs) face limited resources for commercial
-        software and
-        computational power, and they lack the required analytical capacity to formulate evidence-based policies and
-        assess their impacts. I
-        believe I can make a contribution to strengthening analytical capacity of LDCs to conduct analysis of impact of
-        trade policy
-        towards sustainable development.</p>
+    <h3>Published Articles</h3>
+
+    <p>
+        Wölwer, A.L., Burgard, J.P., Kunst, J., and Vargas Sepúlveda, M. "Gravity: Estimation Methods for Gravity Models in R."
+        <i>Journal of Open Source Software</i> 3, no. 31 (November 19, 2018): 1038. <a href="https://doi.org/10.21105/joss.01038">
+            https://doi.org/10.21105/joss.01038</a>.
+    </p>
+
+    <p>
+        Vargas Sepúlveda, M. "Economiccomplexity: Computational Methods for Economic Complexity."
+        <i>Journal of Open Source Software</i> 5, no. 46 (February 19, 2020): 1866. <a href="https://doi.org/10.21105/joss.01866">
+            https://doi.org/10.21105/joss.01866</a>.
+    </p>
+
+    <h3>Pre-Prints</h3>
+
+    <p>
+        Vargas Sepúlveda, M. "Economic Effects of Chile FTAs and an Eventual CTPP Accession." arXiv, September 28, 2022. 
+        <a href="https://doi.org/10.48550/arXiv.2209.14748">https://doi.org/10.48550/arXiv.2209.14748</a>.
+    </p>
+
+    <h3>Thesis</h3>
+
+    <h4>Master in Political Science</h4>
+
+    <p>
+        Vargas Sepúlveda, M. "Disaggregated Economic Effects of FTAs." University of Toronto, 2023 (Expected).
+    </p>
+
+    <h4>Master in Statistics</h4>
+
+    <p>
+        Vargas Sepúlveda, M. "Gravity Modelling Into R: Strengthening Analytical Capacity of ESCAP Member States." UN ESCAP and 
+        P. U. Católica de Chile, 2020.
+    </p>
 
     <h2 id="open-source">Open source</h2>
 
@@ -213,24 +193,29 @@
 
     <h2 id="books">Books</h2>
 
-    <h3 id="hitchhikers-guide">The Hitchhiker's Guide to Ggplot2 & The Hitchhiker's Guide to Plotnine</h3>
+    <p>Vargas Sepúlveda, M. <i>Solutions Manual for An Advanced Guide to Trade Policy Analysis in R</i>. 2nd ed. Bangkok: UN ESCAP, 
+        2022. <a href="https://r.tiid.org/R_structural_gravity/">https://r.tiid.org/R_structural_gravity/</a>.
+    </p>
 
-    <p><a href="https://leanpub.com/ggplot-guide">The Hitchhiker's Guide to Ggplot2</a> is a plotting book for R users.
-        <a href="https://leanpub.com/plotnine-guide">The Hitchhiker's Guide to Plotnine</a> is a plotting book for
-        Python users.</p>
+    <p>
+        Burchell, J. and Vargas Sepúlveda, M. <i>The Hitchhiker's Guide to Plotnine</i>. 1st ed. Victoria: Leanpub, 2019. 
+        <a href="https://leanpub.com/ggplot-guide">https://leanpub.com/ggplot-guide</a>.
+    </p>
 
-    <p>These are a technical books. The scope of the books is to go straight to the point and the writing style is
-        similar to a recipe with detailed instructions. It is assumed that you know the basics of R and Python and that
-        you want to learn how to create beautiful plots.</p>
+    <p>
+        Quiroga, R. Sandoval, G., Vargas Sepúlveda, M. <i>R para Ciencia de Datos: Soluciones de los ejercicios</i>. 1st ed. Santiago: Self-Published, 2019. 
+        <a href="https://r4ds-soluciones.netlify.app/">https://r4ds-soluciones.netlify.app/</a>.
+    </p>
 
-    <p>Each chapter will explain how to create a different type of plot, and will take you step-by-step from a basic
-        plot to a highly customised graph. The chapters' order is by degree of difficulty.</p>
+    <p>
+        Quiroga, R., et al. <i>R Para Ciencia de Datos (Translation)</i>. 1st ed. Santiago: Self-Published, 2019. 
+        <a href="https://es.r4ds.hadley.nz/">https://es.r4ds.hadley.nz/</a>.
+    </p>
 
-    <h3 id="r4ds-es">R for Data Science in Spanish (R4DS-ES)</h3>
-
-    <p>I wrote a large part of R for Data Science translation into <a href="https://es.r4ds.hadley.nz/">Spanish</a>,
-        where I also had to organize the community involved in the translation. This project also features <a
-            href="https://r4ds-soluciones.netlify.app">solutions</a> in Spanish.</p>
+    <p>
+        Burchell, J. and Vargas Sepúlveda, M. <i>The Hitchhiker's Guide to Ggplot2</i>. 1st ed. Victoria: Leanpub, 2016. 
+        <a href="https://leanpub.com/ggplot-guide">https://leanpub.com/ggplot-guide</a>.
+    </p>
 
     <h2 id="r-and-shiny-training">R and Shiny training</h2>
 
