better abotu section

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     </p>
 
     <p>
-        Public Policy: Public-Private Trade Programs, Exports Diversification and Sustainability, Labour Reconversion
+        Public Policy: Public-Private Trade Programs, Exports Diversification and Sustainability, Labour Reconversion.
     </p>
 
     <p>
-        Research Methods: Quantitative Methods, Network Analysis, Text Analysis
+        Research Methods: Quantitative Methods, General Equilibrium Estimation, Generalized Linear Models.
     </p>
 
     <h3>Published Articles</h3>
