--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
 
     <p>I offer short courses for groups and individual personalized sessions at <a
             href="https://www.buymeacoffee.com/pacha/extras">Buy Me a Coffee</a>. I am a certified Tidyverse and Shiny
-        instructor by <a href="https://education.rstudio.com/trainers">RStudio</a> and a Software Carpentry Instructor
-        with a Carpentries certification.</p>
+        instructor by <a href="https://education.rstudio.com/trainers">RStudio</a> and a Software Carpentry Instructor.</p>
 
     <a href="https://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-html401"
             alt="Valid HTML 4.01 Transitional" height="31" width="88" align="right", style="border: 10px solid #fafafa"></a>
